[package]
name = "zcash-txshape"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Transaction Shape Analyzer for Zcash (Read-Only, Aggregate, Non-Attributing)"
license = "MIT"
authors = ["gorusys <goru.connector@outlook.com>"]

[lib]
name = "zcash_txshape"
path = "src/lib.rs"

[[bin]]
name = "zcash-txshape"
path = "cmd/zcash-txshape/src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1.0"
anyhow = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"

[dev-dependencies]
tempfile = "3.10"
